final adjusments to get release1

--- a/failure.html
+++ b/failure.html
@@ -22,7 +22,7 @@
         <h1 class="display-5 fw-bold">Oops, there seems to have been a problem!</h1>
         <p class="col-md-8 fs-4">
           A problem occurred. <br />
-          <em><span id="errorDetail">Error X</span></em><br />
+          <em>"<span id="errorDetail">Error X</span>"</em><br />
           So we suggest that you please check and try again.
         </p>
         <form action="/failure" method="post">
