--- a/signup.html
+++ b/signup.html
@@ -38,7 +38,7 @@
         </div>
 
         <button class="w-100 btn btn-lg btn-primary" type="submit">Sign me up</button>
-        <p class="mt-5 mb-3 text-body-secondary">&copy; 2023</p>
+        <p class="mt-5 mb-3 text-body-secondary">&copy; SEGOCO's Labs</p>
       </form>
     </main>
   </body>
