Success html h1 color change

--- a/success.html
+++ b/success.html
@@ -19,7 +19,7 @@
   <body>
     <div class="p-5 mb-4 bg-body-tertiary rounded-3">
       <div class="container-fluid py-5">
-        <h1 class="display-5 fw-bold">Thank you!</h1>
+        <h1 class="display-5 fw-bold great">Great!</h1>
         <p class="col-md-8 fs-4">
           You are now subscribed to the newest newsletter on the internet. Check your spam folder in case you don't get
           our tuesday edition.
