failure message adjusment

--- a/failure.html
+++ b/failure.html
@@ -19,7 +19,7 @@
   <body>
     <div class="p-5 mb-4 bg-body-tertiary rounded-3">
       <div class="container-fluid py-5">
-        <h1 class="display-5 fw-bold">Oops, there seems to have been a problem!</h1>
+        <h1 class="display-5 fw-bold">Oops, there was a problem!</h1>
         <p class="col-md-8 fs-4">
           A problem occurred. <br />
           <em>"<span id="errorDetail">Error X</span>"</em><br />
